# muscatplus_server

./: .gitignore  LICENSE  SharedLanguageLabels.yml  configuration.yml  configuration.yml.tmpl  mkdocs.yml  pyproject.toml  rism-api.yaml
data_export/: server.py
data_export_server/: server.py
data_export_server/resources/: opengraph.py
data_export_server/routes/: opengraph.py  sigla.py  sitemap.py
data_export_server/templates/opengraph/: card.html.j2  card_image_template.svg.j2
data_export_server/templates/sitemaps/: root.xml.j2  sitemap.xml.j2
data_export_server/templates/twitter/: tw_source.html.j2
docs/: generate_route_docs.py  index.md
docs/api/: api.md  languages.md  modes.md  resource-api.md  routes.md  search-api.md
linked_data/: export.py  logging.yml
locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  pl.yml  pt.yml
scripts/: generate_route_docs.py  test_all.py  test_all_old.py
search_server/: exceptions.py  request_handlers.py  server.py
search_server/helpers/: display_fields.py  display_translators.py  fields.py  formatters.py  identifiers.py  internationalization.py  languages.py  ld_context.py  linked_data.py  query.py  record_types.py  search_request.py  search_request_f.py  semantic_web.py  serializers.py  solr_connection.py  urls.py  vrv.py
search_server/resources/countries/: country.py
search_server/resources/front/: front.py
search_server/resources/incipits/: incipit.py  render.py
search_server/resources/institutions/: base_institution.py  geojson.py  institution.py  institution_relationship.py  institution_search.py  institution_source.py  institutions_list.py
search_server/resources/liturgical_festivals/: liturgical_festival.py
search_server/resources/people/: base_person.py  name_variant.py  notes.py  people_list.py  person.py  person_external_links.py  person_institution_relationship.py  person_name_variant.py  person_note.py  person_person_relationship.py  person_place_relationship.py  person_relationship.py  person_search.py  person_source.py  person_source_relationship.py  variant_name.py
search_server/resources/places/: place.py
search_server/resources/search/: base_search.py  facets.py  pagination.py  probe.py  search.py  search_request.py  search_results.py  sorting.py
search_server/resources/shared/: digital_objects.py  external_authority.py  external_link.py  external_resources.py  institution_relationship.py  notes.py  person_relationship.py  place_relationship.py  record_history.py  relationship.py
search_server/resources/siglum/: sigla.py
search_server/resources/sources/: base_source.py  contents.py  contents_search.py  exemplar.py  exemplars.py  full_source.py  handlers.py  holding_institution.py  incipits.py  index_term.py  material_groups.py  materialgroup.py  note.py  references_notes.py  relationships.py  source_creator.py  source_exemplar.py  source_holding.py  source_incipit.py  source_items.py  source_list.py  (+5 more)
search_server/routes/: api.py  countries.py  external.py  festivals.py  holdings.py  incipits.py  institutions.py  people.py  places.py  query.py  sigla.py  sources.py  subjects.py  works.py
shared_helpers/: client.py  display_fields.py  display_translators.py  fields.py  formatters.py  identifiers.py  jsonld.py  languages.py  resvg.py  serializers.py  solr_connection.py  utilities.py
tests/: test_search.py  test_server.py
(+12 files in other folders)
