[tool.poetry]
name = "search_server"
version = "v1.0.5"
description = "MuscatPlus Search Server"
authors = ["Andrew Hankinson <andrew.hankinson@rism.digital>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.23.0"
pyyaml = "^6.0.1"
rdflib = "^7.0.0"
sentry-sdk = "^1.29.0"
Jinja2 = "^3.1.2"
orjson = "^3.9.1"
verovio = { version = "^3.16.0", allow-prereleases = true }
aiohttp = {extras = ["speedups"], version = "^3.8.5"}
small-asc = {git = "https://github.com/rism-digital/small-asc.git", rev = "main"}
#small-asc = {path = "../small-asc", develop = true }
ypres = {git = "https://github.com/rism-digital/ypres.git", rev = "main"}
sanic = "^23.6.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
aiofiles = "^23.1.0"
mkdocs = "^1.5.2"
mkdocs-gitbook = "^0.0.1"
mkdocs-material = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
